modified:   css/styles.css 	modified:   index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+
 #firstpage, .content, #map{
+	width:100%; height:100%;margin:0; padding:0;
+}
+#secondpage, .content2, #map{
 	width:100%; height:100%;margin:0; padding:0;
 }
