--- a/css/styles.css
+++ b/css/styles.css
@@ -3,5 +3,5 @@
 	width:100%; height:100%;margin:0; padding:0;
 }
 #secondpage, .content2, #map{
-	width:100%; height:100%;margin:0; padding:0;
+	width:100%; height:100%;margin:0; padding:0; background: PaleTurquoise
 }
